<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/layout_bgiamge"
                    android:layout_width="match_parent"
                    android:layout_height="280dp">

                    <ImageView
                        android:id="@+id/iv_bg"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/friend_bg_homepage" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:scaleType="centerCrop"
                        android:src="@color/blank_40" />

                    <TextView
                        android:id="@+id/tv_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="@dimen/dp30"
                        android:background="@drawable/app_frame_all_gray"
                        android:onClick="onClick"
                        android:paddingLeft="21dp"
                        android:paddingTop="6dp"
                        android:paddingRight="21dp"
                        android:paddingBottom="6dp"
                        android:text="@string/change_bg"
                        android:textColor="@color/common_white"
                        android:textSize="14sp" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/layout_head"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp15"
                android:background="@drawable/shape_btn_white_20_bg"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/head"
                    android:textColor="@color/common_white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <brandapp.isport.com.basicres.commonview.RoundImageView
                    android:id="@+id/iv_head"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_below="@+id/iv_back"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/icon_defs"
                    app:border_outside_color="@color/common_item_line_color"
                    app:border_thickness="2dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_arrow_left" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_nikename"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_below="@id/layout_bg"
                android:layout_marginBottom="@dimen/dp15"
                android:background="@drawable/shape_btn_white_20_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/nickname"
                    android:textColor="@color/common_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_name"
                    style="@style/login_edit_style"
                    android:gravity="right|center_vertical"
                    android:hint="@string/enter_nickname"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="18"
                    android:maxLines="1" />
            </LinearLayout>


            <bike.gymproject.viewlibray.ItemView
                android:id="@+id/item_date_gender"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginBottom="@dimen/dp15"
                android:background="@drawable/shape_btn_white_20_bg"
                android:onClick="onClick"

                app:contentSize="@dimen/sp16"
                app:contentText="@string/gender_male"
                app:contentTextColor="@color/common_white"
                app:itemText="@string/gender"
                app:itemTextColor="@color/common_white"
                app:itemviewTitleSize="@dimen/sp16"

                app:showArrow="true"
                app:showBottomLine="true"
                app:showCheckModel="false"
                app:showRemind="false" />


            <bike.gymproject.viewlibray.ItemView
                android:id="@+id/item_date_height"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginBottom="@dimen/dp15"
                android:background="@drawable/shape_btn_white_20_bg"
                android:onClick="onClick"
                app:contentSize="@dimen/sp16"
                app:contentTextColor="@color/common_white"
                app:itemText="@string/body_height"
                app:itemTextColor="@color/common_white"
                app:itemviewTitleSize="@dimen/sp16"
                app:showArrow="true"
                app:showBottomLine="true"
                app:showCheckModel="false"
                app:showRemind="false" />


            <bike.gymproject.viewlibray.ItemView
                android:id="@+id/item_date_weight"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginBottom="@dimen/dp15"
                android:background="@drawable/shape_btn_white_20_bg"
                android:onClick="onClick"
                app:contentSize="@dimen/sp16"
                app:contentTextColor="@color/common_white"
                app:itemText="@string/body_weight"
                app:itemTextColor="@color/common_white"
                app:itemviewTitleSize="@dimen/sp16"
                app:showArrow="true"
                app:showBottomLine="true"
                app:showCheckModel="false"
                app:showRemind="false" />


            <bike.gymproject.viewlibray.ItemView
                android:id="@+id/item_date_birth"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginBottom="@dimen/dp15"
                android:background="@drawable/shape_btn_white_20_bg"
                android:onClick="onClick"
                app:contentSize="@dimen/sp16"
                app:contentText="@string/birthday"
                app:contentTextColor="@color/common_white"
                app:itemText="@string/birthday"
                app:itemTextColor="@color/common_white"
                app:itemviewTitleSize="@dimen/sp16"
                app:showArrow="true"
                app:showCheckModel="false"
                app:showRemind="false" />


            <LinearLayout
                android:id="@+id/layout_edit"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginBottom="@dimen/dp20"
                android:background="@drawable/shape_btn_white_20_bg"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dp5"
                    app:cardCornerRadius="@dimen/dp20"
                    app:cardElevation="2dp"
                    app:cardPreventCornerOverlap="false">

                    <bike.gymproject.viewlibray.ItemView
                        android:id="@+id/item_individual_resume"
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:onClick="onClick"
                        app:contentSize="@dimen/sp16"
                        app:contentText="0/200"
                        app:contentTextColor="@color/common_white"
                        app:itemText="@string/individual_resume"
                        app:itemTextColor="@color/common_white"
                        app:itemviewTitleSize="@dimen/sp16"
                        app:showArrow="false"
                        app:showBottomLine="true"
                        app:showCheckModel="false"
                        app:showRemind="false" />
                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/et_myProfile"
                    style="@style/edit_page_style"
                    android:gravity="left"
                    android:hint="@string/friend_enter_myprofile"
                    android:inputType="text"
                    android:maxLength="200"
                    android:padding="@dimen/dp10" />

                <TextView
                    android:id="@+id/tv_currentcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/tv_sumcount"
                    android:text="0"
                    android:textColor="@color/common_gray_color"
                    android:textSize="@dimen/sp15" />

                <TextView
                    android:id="@+id/tv_sumcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="@dimen/dp15"
                    android:text="/200"
                    android:textColor="@color/common_gray_color"
                    android:textSize="@dimen/sp15" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>


